# ai-hackathon-2024

./: README.md  analyzing_data.ipynb  output.csv  predicting.ipynb  pyproject.toml  test_single_case.ipynb
data/: test.csv  train.csv
src/: dogotry.py
src/data/: sample_submission.csv
